totals text no longer as cramped at smaller screen sizes

--- a/src/App.css
+++ b/src/App.css
@@ -93,6 +93,7 @@ header h2 {
   display: grid;
   margin: 0;
   padding: 1rem;
+  border-right: 1px solid var(--light-grey);
   overflow-y: scroll;
   grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
   grid-template-rows: repeat(6, minmax(100px, 1fr));
@@ -136,7 +137,6 @@ header h2 {
 
 .delete-icon, .checkout-qty {
   text-align: center;
-  line-height: 2em;
   vertical-align: middle;
 }
 
@@ -154,7 +154,7 @@ header h2 {
 .totals-container {
   width: 100%;
   height: 62%;
-  padding: 1.5em 5em;
+  padding: 1.5em 2em;
 }
 
 .totals-container > p {
